# deepseek-council

./: .gitignore  README.md  SKILL.md  contribution_report.py  discover.py  providers.json  pyproject.toml  review.py  setup.sh
docs/: plan-review-action.yml
